--- a/zsh/README
+++ b/zsh/README
@@ -1,4 +1,4 @@
-My zsh installation uses oh-my-zsh framework. Use should install oh-my-zsh
+My zsh installation uses oh-my-zsh framework. You should install oh-my-zsh
 and then move mytheme.zsh-theme to /pathtoyourohmyzsh/themes in order to
 use my own theme.
 
