--- a/vim/README
+++ b/vim/README
@@ -1,8 +1,22 @@
-My vimrc is plugin free at the moment but many (programming) plugins
-will be added soon. It makes uses of Vundle plugin management system
-to have a well organized vim directory. Vundle also ensures that the
-latest versions of your plugins are installed and makes it easy to keep
-them up to date.
+My vimrc makes uses of Vundle plugin management system to have a well
+organized vim directory. Vundle also ensures that the latest versions
+of your plugins are installed and makes it easy to keep them up to date.
 
 Vundle homepage: https://github.com/gmarik/vundle
 
+
+Plugins (By alphabetical order)
+--------------------------------
+
+Name                   Description
+-------                ------------
+neocomplcache:         amazing autocomplete plugin
+neosnippet             snippet support
+nerdcommenter          wrangle code comments, regardless of filetype
+nerdtree               file explorer
+python-mode            python support using pylint, rope, pyflakes, etc
+snipmate-snippets      snippet support
+tagbar                 provides a panel to easily navigate via files tags
+undotree               keeps undid changes
+vim-autoclose          automatically close brackets, parens, quotes, etc
+vim-nerdtree-tabs      makes nerdtree independent of tabs
