--- a/vim/README
+++ b/vim/README
@@ -1,10 +1,10 @@
-My vimrc makes uses of Vundle plugin management system to have a well
-organized vim directory. Vundle also ensures that the latest versions
-of your plugins are installed and makes it easy to keep them up to date.
+My vimrc uses Vundle plugin management system to have a well organized vim
+directory. Vundle also ensures that the latest versions of your plugins are
+installed and makes it easy to keep them up to date.
 
 
 Plugins (By alphabetical order)
---------------------------------
+================================
 
 Name                   Description
 -------                ------------
