--- a/vim/README
+++ b/vim/README
@@ -9,11 +9,10 @@ Plugins (By alphabetical order)
 Name                   Description
 -------                ------------
 neocomplcache          amazing autocomplete plugin
-neosnippet             snippet support
+neosnippet             snippets support
 nerdcommenter          wrangle code comments, regardless of filetype
 nerdtree               file explorer
 python-mode            python support using pylint, rope, pyflakes, etc
-snipmate-snippets      snippet support
 tagbar                 provides a panel to easily navigate via files tags
 undotree               keeps undid changes
 vim-autoclose          automatically close brackets, parens, quotes, etc
