--- a/vim/README
+++ b/vim/README
@@ -3,15 +3,14 @@ directory. Vundle also ensures that the latest versions of your plugins are
 installed and makes it easy to keep them up to date.
 
 
-Plugins (By alphabetical order)
-================================
+Plugins:
 
 Name                   Description
 -------                ------------
 neocomplcache          amazing autocomplete plugin
-nerdcommenter          wrangle code comments, regardless of filetype
+tagbar                 easily navigation via files tags
 nerdtree               file explorer
-tagbar                 provides a panel to easily navigate via files tags
-undotree               keeps undid changes
-vim-autoclose          automatically close brackets, parens, quotes, etc
-vim-nerdtree-tabs      makes nerdtree independent of tabs
+vim-nerdtree-tabs      nerdtree, independent of tabs
+undotree               undo history graph
+nerdcommenter          code comments wrangle
+vim-autoclose          autoclose brackets, parens, quotes, etc
