--- a/README
+++ b/README
@@ -1,3 +1,18 @@
 My personal configuration files.
+Containing files about vim, zsh, git and lxde.
 
-Feel free to use, change and redistribute any of them if you find them useful.
+Installation
+-------------
+Just run the install.sh script in the top-level directory.
+
+There are different install scripts for each configuration bundle so
+you can edit the top install.sh script and select only the pieces you
+wish to install.
+
+License
+--------
+All files and code are in the public domain and distributed in the hope
+that it will be useful, but WITHOUT ANY WARRANTY. Feel free to use, change
+and redistribute any of them.
+
+Maintainer: Ilias Stamatis <stamatis.iliass at gmail>
