remove lxde-rc.xml file

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 My personal configuration files.
-Containing files about vim, zsh, git and lxde.
+Containing files about vim, zsh and git.
 
 Installation
 -------------
