--- a/vim/README
+++ b/vim/README
@@ -27,4 +27,5 @@ vim-surround           easily delete, change and add surroundings
 vim-colors-solarized   the solarized colorscheme for gvim
 emmet-vim              expand abbreviation like emmet
 vim-matchit            jump between opening and closing HTML tags
+python-mode            python support (syntax checking etc.)
 HTML-AutoCloseTag      autoclose html tags
