--- a/vim/README
+++ b/vim/README
@@ -16,7 +16,7 @@ Plugins used:
 
 Name                   Description
 -------                ------------
-YouCompleteMe          code-completion
+neocomplete            code-completion
 vim-snipmate           code snippets completion
 vim-easymotion         vim motions
 tagbar                 tags display
